--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
     "next-themes": "^0.3.0",
+    "path": "^0.12.7",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
